--- a/static/config.json
+++ b/static/config.json
@@ -3429,13 +3429,13 @@
 	"images": [
 		"https://storeno.b-cdn.net/themes/palest.jpg"
 	],
-	"isActive": true,
+	"isActive": false,
 	"autoRenew": false,
 	"_id": "654e4a1c6cdac169bf62a70a",
 	"expiryDate": "2050-12-12T00:00:00.000Z",
 	"name": "CarMieten",
-	"url": "/themes/CarMieten",
-	"route": "palest",
+	"url": "/themes/rental",
+	"route": "CarRental",
 	"defaults": [],
 	"paymentType": "yearly",
 	"payments": [],
