--- a/static/config.json
+++ b/static/config.json
@@ -3433,9 +3433,9 @@
 	"autoRenew": false,
 	"_id": "654e4a1c6cdac169bf62a70a",
 	"expiryDate": "2050-12-12T00:00:00.000Z",
-	"name": "CarMieten",
+	"name": "rental",
 	"url": "/themes/rental",
-	"route": "CarRental",
+	"route": "rental",
 	"defaults": [],
 	"paymentType": "yearly",
 	"payments": [],
